<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>myagv_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mincheol710313@gmail.com">godssi</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>myagv_description</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>message_filters</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
