<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>myagv_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mincheol710313@gmail.com">godssi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>myagv_bringup</exec_depend>
  <exec_depend>myagv_teleop_ros2</exec_depend>
  <exec_depend>myagv_cartographer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
